Se realizaron ajustes para limpiar los catalogos